--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>First repo of 2023</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <h3>New changes are available now</h3>
+    <h2>change the color</h2>
+    <p>so I am the one who procastinate all the time</p>
+  </body>
 </html>
